# ChangeLog for dev-ml/findlib
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/ChangeLog,v 1.9 2004/06/25 00:01:32 agriffis Exp $

  28 May 2004; Danny van Dyk <kugelfang@gentoo.org> findlib-0.8.ebuild:
  Marked -amd64 as dependencies aren't fulfilled anymore.

  30 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> findlib-0.8.ebuild:
  Adding amd64 keyword. Closing #44197.

  23 Mar 2004; Matthieu Sozeau <mattam@gentoo.org> findlib-0.8.ebuild:
  Mark stable on ppc (long time i use it but forgot to mark it).

  13 Mar 2004; David Holm <dholm@gentoo.org> findlib-0.8.ebuild:
  Added to ~ppc.

  15 Feb 2004; Jason Wever <weeve@gentoo.org> findlib-0.8.ebuild:
  Added ~sparc keyword to fix dev-ml/ocaml-make's broken deps.

*findlib-0.8 (15 Dec 2002)

  15 Dec 2002; George Shapovalov <george@gentoo.org> ChangeLog, findlib-0.8.ebuild, files/digest-findlib-0.8 :
  initial release
  OCaml tool to find/use non-standard packages.
  ebuild submitted by Matthieu Sozeau <mattam@netcourrier.com>