@@ -1,6 +1,12 @@
 # ChangeLog for dev-ml/findlib
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/ChangeLog,v 1.9 2004/06/25 00:01:32 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/ChangeLog,v 1.10 2004/08/08 08:38:22 mattam Exp $
+
+*findlib-1.0.4 (08 Aug 2004)
+
+  08 Aug 2004; Matthieu Sozeau <mattam@gentoo.org> +findlib-1.0.4.ebuild:
+  Version bump, fix bug #51254. Thanks to Bardur Arantsson <gentoo@scientician.net>
+  for the update.
 
   28 May 2004; Danny van Dyk <kugelfang@gentoo.org> findlib-0.8.ebuild:
   Marked -amd64 as dependencies aren't fulfilled anymore.
@@ -19,7 +25,8 @@
 
 *findlib-0.8 (15 Dec 2002)
 
-  15 Dec 2002; George Shapovalov <george@gentoo.org> ChangeLog, findlib-0.8.ebuild, files/digest-findlib-0.8 :
+  15 Dec 2002; George Shapovalov <george@gentoo.org> ChangeLog, 
+  findlib-0.8.ebuild, files/digest-findlib-0.8 :
   initial release
   OCaml tool to find/use non-standard packages.
   ebuild submitted by Matthieu Sozeau <mattam@netcourrier.com>
